# codeforces-in-haskell

./: CHANGELOG.md  codeforces-in-haskell.cabal
src/: Main.hs  Problems.hs
src/Problems/: Class.hs  P_1982A.hs  P_231A.hs
