cabal-version:      3.0
name:               codeforces-in-haskell
version:            0.1.0.0
synopsis:           Solving codeforces exercises in Haskell
-- description:
license:            MIT
license-file:       LICENSE
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable codeforces-in-haskell
    import:           warnings
    main-is:          Main.hs
    other-modules:  
      Problems
      Problems.Class
      Problems.P_231A
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , optparse-applicative
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: GADTs, TypeApplications

